# lmsr-lab

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DESIGN.md  LICENSE  README.md  app.py  pyproject.toml  start-professional-ui.sh
examples/: README.md  __init__.py  demo_seeding.py  experiments.py  experiments_1b_kelly_sensitivity.py  extend_illustrative_histories.py  generate_kelly_histories.py  generate_rug_analysis_report.py  interleaved_bots.py  replay_history.py  simple_bots.py  trading_agent.py  ui_300_round_bots.py
examples/reports/: lmsr_parameter_sensitivity.md
examples/reports/experiment_2_continuous_liquidity/: lmsr_continuous_liquidity.md
examples/reports/experiment_3_capital_efficiency/: lmsr_capital_efficiency.md
examples/reports/parameter_sensitivity/: lmsr_parameter_sensitivity.md
examples/trade_histories/: balanced_trades.json  experts_vs_punters_10000.json  kelly_high_activity.json  kelly_long_trend.json  kelly_rug_pull.json  late_buyers.json  long_gradual_trend.json  long_rug_with_fake_volume.json  mixed_high_activity.json  oscillating_trades.json  pump_and_dump_with_fomo.json  rug_pull_classic.json  slow_build_then_surge.json  strong_early_conviction.json  very_long_gradual_trend.json  very_long_pump_and_rug.json  whale_then_correction.json
frontend/: README.md  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx  types.ts
frontend/app/components/: Leaderboard.tsx  MarketCard.tsx  MarketModal.tsx  PriceHistoryChart.tsx
frontend/app/hooks/: useFetch.ts  useProData.ts
src/lmsr/: __init__.py  adaptive.py  agent.py  api.py  cli.py  db.py  market.py  scoring.py  simulator.py
tests/: test_lmsr.py  test_simulator.py
