[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lmsr-lab"
version = "0.1.0"
description = "A research-oriented LMSR prediction market simulator with Kelly betting, resolution scoring, and portfolio tracking."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Robert Thijs Kozma", email = "robert@kozma.ai" }
]
keywords = [
    "lmsr",
    "prediction-market",
    "forecasting",
    "simulation",
    "kelly-criterion",
    "scoring-rules",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Games/Entertainment :: Simulation",
]

dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
demo = [
    "streamlit>=1.28",
]
plot = [
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://github.com/rkthijs/lmsr-lab"
Repository = "https://github.com/rkthijs/lmsr-lab"
Issues = "https://github.com/rkthijs/lmsr-lab/issues"

[project.scripts]
lmsr = "lmsr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lmsr"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "examples/",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "DESIGN.md",
    "AGENTS.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["numpy.*", "streamlit.*", "matplotlib.*"]
ignore_missing_imports = true